--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "GMP",
+  "name": "GMP Audit Reports",
   "icons": [
     {
       "src": "assets/img/logo.jpg",
